# PhoenixBoot

./: .gitignore  .phoenix.env  Justfile  Justfile.broken  Justfile.build  Justfile.code-org  Justfile.iso  Justfile.maintenance  Justfile.nuke  Justfile.os  Justfile.secure  Justfile.test  Justfile.usb  Justfile.validate  Justfile.vars  PGMOK.crt  PGMOK.der  PGMOK.key  PGMOK.pem  Pfyfile.pf  Project.edk2  build.pf  codeorg.pf  iso.pf  maint.pf  os.pf  pb  pf.py  pgmodsign.py  phoenix-boot  pipelines.pf  secure.pf  test.pf  usb.pf  validate.pf
bios_extractions/: g615lp_uefi_profile.json  g615lp_variable_analysis.json
docs/: BOOT_SEQUENCE_AND_ATTACK_SURFACES.md  COMPLETE_SYSTEM_UNDERSTANDING.md  FIRMWARE_RECOVERY.md  HARDWARE_ACCESS_DEEP_DIVE.md  JUSTFILE_MODULARIZATION.md  NUCLEAR_BOOT_CD.md  PROGRESSIVE_RECOVERY.md  PROJECT_STRUCTURE.md  README.md  SECURE_BOOT.md  copilot-instructions.md
examples_and_samples/demo/legacy-old/examples/nuclear-boot-rust/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  WARP.md  alternative_approaches.md
examples_and_samples/demo/legacy-old/examples/nuclear-boot-rust/src/: allocator.rs  console.rs  lockout_prevention.rs  logger.rs  main.rs  network.rs  nuclear.rs  nuclear_wipe_demo.rs  wipe_engine.rs
ideas/: IDEAS
keys/: KEK.key.xxd.xxd  KEK.key.xxd.xxd.xxd  PK.cer  PK.key  PK.key.xxd  PK.key.xxd.xxd.xxd  db.key  db.key.xxd.xxd.xxd
nuclear-cd-build/: nuclear-boot-clean.c
scripts/: README.md  analyze_firmware_baseline.py  audit-tree.sh  baseline-verify.sh  boot-from-esp-iso.sh  build-nuclear-cd-sb.sh  build-nuclear-cd.sh  (+99 more)
(+246 files in other folders)
