[package]
name = "nuclear-boot"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "nuclear-boot"
path = "src/main.rs"

[dependencies]
# Core no_std dependencies
linked_list_allocator = { version = "0.10", default-features = false, features = ["use_spin"] }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }
bootloader_api = "0.11"
bootloader = { version = "0.10", default-features = false }
lazy_static = { version = "1.4", features = ["spin_no_std"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

# Build configuration for bare metal
[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
run-args = ["-serial", "stdio", "-netdev", "user,id=net0", "-device", "e1000,netdev=net0"]
